BuildingsPy Changelog
---------------------

Version 1.5.1, xxxx -- Release 1.5
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Updated buildingspy.development.refactor.write_package_order()
  so that also types that are enumerations are added to the package.order file.
- Corrected TypeError during parsing of an exception that led to a wrong
  error message.
- In regression tests for Dymola, added check for missing stateGraphRoot.

Version 1.5.0, March 29, 2016 -- Release 1.5
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added module fmi with a function that outputs fmu dependencies.
- Added regression tests for OpenModelica.
- Changed implementation of addParameters(...) to allow
  setting values of parameters that are arrays.
- Corrected bug that lead to files such as .DStore in Resources/Scripts
  to be processed as if they were scripts that run unit tests.
- Added class buildingspy.development.merger, which can be used
  to merge the Annex60 Modelica library to other Modelica libraries,
  such as the Buildings library.
- Corrected bug in copying the files for the unit tests, which
  caused libpython2.7.so not to be copied on some computers
- Added method development.include_fmu_tests that allow testing
  the export of FMUs.
- development.regressiontest now also reports when Dymola
  had to select default initial conditions,
  a model had redundant consistent initial conditions, or
  a model had type inconsistent definition equations.
- Corrected bug in simulate.Simulator that caused a syntax error
  in the Modelica .mos script when setting boolean variables.
- Changed the API of buildingspy.simulate.Simulator.
  Previously, the MODELICAPATH was used as the default
  to load the package.mo file. This was changed because the
  MODELICAPATH variable points one directory higher than the
  location of the package.mo file.
  Now, the current directory is used as the default value, which
  can be overwritten using the parameter packagePath.